--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@storybook/html": "^5.3.18",
-    "babel-loader": "^8.1.0"
+    "babel-loader": "^8.1.0",
+    "css-loader": "^3.5.2",
+    "node-sass": "^4.13.1",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.4"
   }
 }
